--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -56,7 +56,7 @@
         <div class="row justify-content-between">
 
             <div class="col bg-dark text-white monitor-item">
-                Current Clients:
+                Socket Connections:
                 <div id="current_clients" class="text-center mt-5 status-number">0</div>
             </div>
 
